wiki/src/install/inc/stylesheets/overview.css
h1 {
  margin-bottom: 40px;
}

h1:before {
  content: '' !important;
}

h3 {
  margin-bottom: 10px;
}

#needs h4 {
  font-size: 1em;
  margin: 0px;
  color: black;
}

#needs h3, #steps h3 {
  display: block;
}

h4 small {
  font-size: 60%;
}

#steps h4 {
  margin-left: 75px;
}

.thumbnail {
  text-align: center;
  border: none;
  padding: 0px;
}

.thumbnail .caption {
  padding: 0px;
}

#steps .thumbnail {
  position: relative;
  margin-bottom: 0px;
}

#steps .caption {
  position: absolute;
  top: 90px;
  width: 100%;
}

#needs .thumbnail img {
  width: 100px;
}

#steps .thumbnail img {
  width: 130%;
  outline: 4px solid white;
  outline-offset: -2px;
}

#steps ol {
  list-style-type: none;
  margin-left: 70px;
}

#steps h4 {
  padding: 10px;
  margin: 0px;
  font-size: 1.7em;
  color: black;
}

#overview {
  text-align: center;
  position: absolute;
  top: -20px;
  right: 0;
  display: none;
}

#overview h2, #needs h3, #steps h3 {
  text-align: center;
  padding: 10px;
  background: #0A0;
  color: white;
  display: inline-block;
  font-size: 20px;
}

#needs h3, #steps h3 {
  font-size: 15px;
  color: darkgrey;
  background: white;
}

